force-app/main/default/objects/Drawdown__c/fields/Interest_Deferral_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Deferral_Period__c</fullName>
    <description>The Interest Deferral Period from the Opportunity, replicated here to avoid cross object formula size limitations.  Also converted to an number from a picklist value so it&apos;s readily usable in formulas.</description>
    <inlineHelpText>The months to defer interest on this Drawdown.</inlineHelpText>
    <label>Interest Deferral Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>