force-app/main/default/objects/Drawdown__c/fields/Interest_End_Date_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_End_Date_Reserve_Date__c</fullName>
    <formula>IF( Reserve_Date__c &gt;Date__c + 30*Minimum_Interest_Period__c - 1,Reserve_Date__c,Date__c + 30*Minimum_Interest_Period__c - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest End Date - Reserve Date</label>
    <type>Date</type>
</CustomField>