force-app/main/default/objects/Drawdown__c/fields/Interest_End_Dt_at_Last_Pymt_b4_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Interest_End_Dt_at_Last_Pymt_b4_Reserve__c</fullName>
    <label>Interest End Dt at Last Pymt b4  Reserve</label>
    <type>Date</type>
</CustomField>