force-app/main/default/objects/Drawdown__c/fields/Interest_Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type__c</fullName>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Variable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>