force-app/main/default/objects/Drawdown__c/fields/Interest_Repaid_as_of_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Repaid_as_of_Reserve_Date__c</fullName>
    <label>Interest Repaid as of Reserve Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>