force-app/main/default/objects/Drawdown__c/fields/Interest_Repaid_with_Reserve_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Repaid_with_Reserve_To_Date__c</fullName>
    <description>Interest repaid between Reserve Date and Reporting To Date</description>
    <label>Interest Repaid with Reserve To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>