force-app/main/default/objects/Drawdown__c/fields/Interest_Start_Date_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Start_Date_Reserve_Date__c</fullName>
    <formula>IF(Interest_Deferral_Period__c&gt;0, ADDMONTHS(Date__c,Interest_Deferral_Period__c),
IF(not(isblank(Date_of_Last_Repayment_b4_Reserve_Date__c)), Interest_End_Dt_at_Last_Pymt_b4_Reserve__c+ 1,Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Start Date - Reserve Date</label>
    <type>Date</type>
</CustomField>