force-app/main/default/objects/Drawdown__c/fields/Interest_up_to_Last_Repymt_b4_Reserve_Dt__c.field-meta.xml
<CustomField>
    <fullName>Interest_up_to_Last_Repymt_b4_Reserve_Dt__c</fullName>
    <inlineHelpText>Sum of all Interest Accrued up to the point of last repayment but before Reserve Date. This is a roll-up summary field (DLRS) and should not be updated directly.</inlineHelpText>
    <label>Interest up to Last Repymt b4 Reserve Dt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>