force-app/main/default/objects/Drawdown__c/fields/Is_Admin_Fee_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin_Fee_Rejection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Admin Fee Rejection</label>
    <type>Checkbox</type>
</CustomField>