force-app/main/default/objects/Drawdown__c/fields/Is_NSF_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Is_NSF_Rejection__c</fullName>
    <formula>AND(NOT(ISBLANK(TEXT(Reason_to_Reverse_Payment_NSF__c))), Rejections_Count__c &gt; 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is NSF Rejection</label>
    <type>Checkbox</type>
</CustomField>