force-app/main/default/objects/Drawdown__c/fields/Is_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Is_Rejected__c</fullName>
    <formula>Rejections_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rejected</label>
    <type>Checkbox</type>
</CustomField>