force-app/main/default/objects/Drawdown__c/fields/Is_Rejection_Drawdown__c.field-meta.xml
<CustomField>
    <fullName>Is_Rejection_Drawdown__c</fullName>
    <formula>OR(ISPICKVAL(Reference_Notes__c, &apos;Payment Rejected&apos;), ISPICKVAL(Reference_Notes__c, &apos;Payment Halted&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rejection Drawdown</label>
    <type>Checkbox</type>
</CustomField>