force-app/main/default/objects/Drawdown__c/fields/Is_Reserve_Applied__c.field-meta.xml
<CustomField>
    <fullName>Is_Reserve_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reserve Applied</label>
    <type>Checkbox</type>
</CustomField>