force-app/main/default/objects/Drawdown__c/fields/Month_Target__c.field-meta.xml
<CustomField>
    <fullName>Month_Target__c</fullName>
    <formula>IF( ISPICKVAL(Opportunity__r.Account.Business_Unit__c, &#39;ELFI&#39;), 500000 , 700000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>