force-app/main/default/objects/Drawdown__c/fields/No_Interest__c.field-meta.xml
<CustomField>
    <fullName>No_Interest__c</fullName>
    <formula>ISPICKVAL(Reference_Notes__c,&quot;Admin Fee - No Interest&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Interest</label>
    <type>Checkbox</type>
</CustomField>