force-app/main/default/objects/Drawdown__c/fields/NSF_Fee__c.field-meta.xml
<CustomField>
    <fullName>NSF_Fee__c</fullName>
    <defaultValue>5.00</defaultValue>
    <label>NSF Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>