force-app/main/default/objects/Drawdown__c/fields/Opportunity_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reserve_Date__c</fullName>
    <formula>Opportunity__r.Reserve_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Reserve Date</label>
    <type>Date</type>
</CustomField>