force-app/main/default/objects/Drawdown__c/fields/Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status__c</fullName>
    <formula>If (NOT(IsPickVal(Opportunity__r.StageName,&apos;Closed With Loan&apos;)),&apos;Inactive&apos;,
     If (ISBLANK(TEXT(Opportunity__r.Stage_Status__c)),&apos;Active&apos;,
         If (IsPickVal(Opportunity__r.Stage_Status__c,&apos;Partial Payment&apos;),&apos;Partial Payment&apos;,
             If (IsPickVal(Opportunity__r.Stage_Status__c,&apos;Payments Halted&apos;),&apos;Payments Halted&apos;,&apos;Inactive&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Opportunity states summarizing those still accruing interest.   Used for ELFI 2 report.</inlineHelpText>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>