force-app/main/default/objects/Drawdown__c/fields/Outstanding_Balance_as_of_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_as_of_Reserve_Date__c</fullName>
    <formula>IF (OR( ISPICKVAL(Reference_Notes__c,&quot;Referral Fee&quot;),
ISPICKVAL(Reference_Notes__c,&quot;Refund&quot;),
ISPICKVAL(Reference_Notes__c,&quot;Payment Re-processed&quot;)),0,
IF( ISPICKVAL(Payment_Method__c , &quot;Payment&quot;),Sum_of_Payment_Allocations__c - Amount__c,
IF(Compounding_Interest__c,(Amount_Adjusted_for_Repymt_b4_Reserve_Dt__c*(EXP(LN(1 + (Interest_Rate__c/Compounding_Frequency__c))*
(Compounding_Frequency__c*Interest_Accrual_Years_to_Reserve_Dt__c)))),Amount_Adjusted_for_Repymt_b4_Reserve_Dt__c*(1+((Interest_Rate__c/365)* Interest_Accrual_Days_to_Reserve_Dt__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance as of Reserve Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>