force-app/main/default/objects/Drawdown__c/fields/Outstanding_Balance_Simple_I_Formula__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_Simple_I_Formula__c</fullName>
    <formula>Amount_Adjusted_for_Repayments__c*(1+((Interest_Rate__c/365)* Interest_Accrual_Days__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance Simple I Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>