force-app/main/default/objects/Drawdown__c/fields/Outstanding_Balance_VR__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_VR__c</fullName>
    <label>Outstanding Balance VR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>