force-app/main/default/objects/Drawdown__c/fields/Payment_Can_Be_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Can_Be_Reversed__c</fullName>
    <formula>AND(
OR( ISPICKVAL(Reference_Notes__c,&quot;Loan Payout&quot;),
ISPICKVAL(Reference_Notes__c,&quot;Partial Payment&quot;)),
ISPICKVAL(Payment_Method__c,&quot;Payment&quot;),
Amount__c &gt; 0,
OR(ISNULL(Rejections_Count__c), Rejections_Count__c=0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Can Be Reversed</label>
    <type>Checkbox</type>
</CustomField>