force-app/main/default/objects/Drawdown__c/fields/Payment_Summary_Report_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Summary_Report_Amount__c</fullName>
    <formula>IF(OR(ISPICKVAL(Reference_Notes__c, &quot;Refund&quot;),
ISPICKVAL(Reference_Notes__c, &quot;Client Rebate&quot;)),
(Amount__c)*-1,
Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Summary Report Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>