force-app/main/default/objects/Drawdown__c/fields/Payment_Summary_Report_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Payment_Summary_Report_Business_Unit__c</fullName>
    <formula>$Setup.Payment_Summary_Report__c.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Summary Report Business Unit</label>
    <type>Text</type>
</CustomField>