force-app/main/default/objects/Drawdown__c/fields/Payment_Summary_Report_Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Summary_Report_Type_of_Loan__c</fullName>
    <formula>$Setup.Payment_Summary_Report__c.Type_of_Loan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Summary Report Type of Loan</label>
    <type>Text</type>
</CustomField>