force-app/main/default/objects/Drawdown__c/fields/Payout_Interest_First__c.field-meta.xml
<CustomField>
    <fullName>Payout_Interest_First__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payout Interest First</label>
    <type>Checkbox</type>
</CustomField>