force-app/main/default/objects/Drawdown__c/fields/Principal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Principal_Amount__c</fullName>
    <formula>IF(Include_in_Principal__c, Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>