force-app/main/default/objects/Drawdown__c/fields/Principal_Non_Repaid_To_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Principal_Non_Repaid_To_Reserve_Date__c</fullName>
    <formula>Amount__c -   Sum_of_Principal_Repymt_b4_Reserve_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Non Repaid To Reserve Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>