force-app/main/default/objects/Drawdown__c/fields/Quarter_Target__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Target__c</fullName>
    <formula>IF( ISPICKVAL(Opportunity__r.Account.Business_Unit__c, &#39;ELFI&#39;), 1000000 , 2000000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>