force-app/main/default/objects/Drawdown__c/fields/Quarter_Year__c.field-meta.xml
<CustomField>
    <fullName>Quarter_Year__c</fullName>
    <formula>TEXT(YEAR( Date__c ))</formula>
    <label>Year</label>
    <type>Text</type>
</CustomField>