force-app/main/default/objects/Drawdown__c/fields/Reason_to_Reverse_Payment_NSF__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Reverse_Payment_NSF__c</fullName>
    <label>Reason for reversing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSF Cheque</fullName>
            </value>
            <value>
                <fullName>Client Error</fullName>
            </value>
            <value>
                <fullName>ELFI Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>