force-app/main/default/objects/Drawdown__c/fields/Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Date__c</fullName>
    <label>Reserve Date</label>
    <type>Date</type>
</CustomField>