force-app/main/default/objects/Drawdown__c/fields/Reserve_Exclude_Interest_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Exclude_Interest_Repayment__c</fullName>
    <formula>AND(Is_Rejection_Drawdown__c, NOT(ISBLANK(Drawdown_To_Reverse_Date__c)),Drawdown_To_Reverse_Date__c &gt; Reserve_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserve Exclude Interest Repayment</label>
    <type>Checkbox</type>
</CustomField>