force-app/main/default/objects/Drawdown__c/fields/Reversing_Check__c.field-meta.xml
<CustomField>
    <fullName>Reversing_Check__c</fullName>
    <label>Check #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>