force-app/main/default/objects/Drawdown__c/fields/rsp_id__c.field-meta.xml
<CustomField>
    <fullName>rsp_id__c</fullName>
    <label>rsp_id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>