force-app/main/default/objects/Drawdown__c/fields/Stop_Interest__c.field-meta.xml
<CustomField>
    <fullName>Stop_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Interest</label>
    <type>Checkbox</type>
</CustomField>