force-app/main/default/objects/Drawdown__c/fields/Sum_of_Principal_Repymt_b4_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Principal_Repymt_b4_Reserve_Date__c</fullName>
    <label>Sum of Principal Repymt b4 Reserve Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>