force-app/main/default/objects/Drawdown__c/fields/Sum_of_Repayments_Before_Reserve_Date__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Repayments_Before_Reserve_Date__c</fullName>
    <label>Sum of Repayments Before Reserve Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>