force-app/main/default/objects/Drawdown__c/fields/Test1__c.field-meta.xml
<CustomField>
    <fullName>Test1__c</fullName>
    <formula>LEN(TEXT(Reason_to_Reverse_Payment_NSF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>