force-app/main/default/objects/Drawdown__c/fields/Variable_Fee_Effected_At__c.field-meta.xml
<CustomField>
    <fullName>Variable_Fee_Effected_At__c</fullName>
    <label>Variable Fee Effected At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Setup</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>One Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>