force-app/main/default/objects/Drawdown__c/fields/Variable_Fees_Generated__c.field-meta.xml
<CustomField>
    <fullName>Variable_Fees_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Variable Fees Generated</label>
    <type>Checkbox</type>
</CustomField>