force-app/main/default/objects/Drawdown__c/fields/Wire_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wire_Fee__c</fullName>
    <label>Wire Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>