force-app/main/default/objects/Drawdown__c/fields/Year_Target__c.field-meta.xml
<CustomField>
    <fullName>Year_Target__c</fullName>
    <formula>IF(  ISPICKVAL(Opportunity__r.Account.Business_Unit__c, &#39;ELFI&#39;), 2000000 , 4000000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>