force-app/main/default/objects/Drawdown__c/fields/Yearly_Lawyer_Target__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Lawyer_Target__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c, &apos;ELFI&apos;), 1700000 , IF(ISPICKVAL(Opportunity__r.Account.Business_Unit__c, &apos;Seahold&apos;), 0 , 300000 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yearly Lawyer Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>