force-app/main/default/objects/Drawdown__c/validationRules/Cannot_create_drawdown_wo_loan_set_up.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_create_drawdown_wo_loan_set_up</fullName>
    <active>true</active>
    <description>Prevent users from creating drawdown records before the loan set up section in the opportunity is populated.</description>
    <errorConditionFormula>AND( 
    ISNEW(), 
    OR( 
        AND(
            ISPICKVAL(Opportunity__r.Minimum_Interest_Period__c, &apos;&apos;), 
            NOT(OR(IsPickVal(Opportunity__r.Interest_Deferral_Period__c,&apos;0&apos;), 
                   IsPickVal(Opportunity__r.Interest_Deferral_Period__c,&apos;&apos;)))
            ),
        AND(ISBLANK( Opportunity__r.Interest_Rate__c), NOT(IsPickVal(Opportunity__r.Interest_Rate_Type__c, &apos;Variable&apos;))), 
		ISPICKVAL(Opportunity__r.Interest_Compounding_Period__c,&apos;&apos;),
		AND(
            ISPICKVAL(Opportunity__r.Compounding_Interest__c, &apos;&apos;),
			ISPICKVAL(Opportunity__r.Interest_Compounding_Period__c,&apos;Compounding Interest&apos;)
           )
		),
		NOT(ISPICKVAL(Opportunity__r.Type_of_Loan__c, &apos;Lawyer Loan-Contingency Fee Acceleration&apos;))
    )</errorConditionFormula>
    <errorMessage>You cannot create drawdowns before populating the loan set up.</errorMessage>
</ValidationRule>