force-app/main/default/objects/Drawdown__c/validationRules/No_Interest.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Interest</fullName>
    <active>false</active>
    <description>The interest rate of this drawdown shoud be equal to 0</description>
    <errorConditionFormula>AND(No_Interest__c, NOT(ISBLANK(Interest_Rate__c)), (Interest_Rate__c &lt;&gt; 0))</errorConditionFormula>
    <errorMessage>The interest rate of this drawdown shoud be equal to 0</errorMessage>
</ValidationRule>