force-app/main/default/objects/Drawdown__c/validationRules/SPD_Total_Balance_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>SPD_Total_Balance_Check</fullName>
    <active>true</active>
    <description>Total Drawdowns cannot be greater than Service Provider allowance</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Opportunity_Service_Provider__c)),
ISCHANGED(Amount__c),
Amount__c &gt; Service_Provider_Allowed_Balance__c,
NOT( ISPICKVAL( Payment_Method__c , &apos;Payment&apos;) )
)</errorConditionFormula>
    <errorMessage>This Service Provider Drawdown record cannot be saved as it will exceed the Service Provider Allowance.</errorMessage>
</ValidationRule>